--- a/src/components/Challenge1/Challenge1.module.scss
+++ b/src/components/Challenge1/Challenge1.module.scss
@@ -2,4 +2,18 @@
   h2 {
     color: green;
   }
+
+  .flagContainer1 {
+    width: 300px;
+    height: 200px;
+    border: 1px dotted black;
+    display: inline-block;
+    margin: 1rem;
+  }
+
+  .flagExample {
+    max-width: 100px;
+    max-height: 100px;
+    margin: 1em 3em;
+  }
 }
