--- a/src/components/Challenge1/Challenge1.module.scss
+++ b/src/components/Challenge1/Challenge1.module.scss
@@ -16,4 +16,16 @@
     max-height: 100px;
     margin: 1em 3em;
   }
+
+  .FlagOfJapan {
+    background-color: lightblue;
+  }
+
+  .FlagOfEngland {
+    background-color: lightyellow;
+  }
+
+  .FlagOfUAE {
+    background-color: lightgreen;
+  }
 }
